code added at 9:05

--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <h1>contactnnnnn</h1>
     <a href="contact.html"> contact page</a>
     <h3>i m am adding this code at 7pm</h3>
+    <h2>hello ishfaq</h2>
     
 </body>
 </html>
